--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,7 @@ version: 1
 before:
   hooks:
     - go mod tidy
-    - go generate ./...
+    - go test ./...
 
 builds:
   - main: ./main_new.go
@@ -66,19 +66,44 @@ changelog:
       - '^test:'
 
 release:
-  github:
-    owner: domain-scan
-    name: domain-scan
-  draft: true
+  draft: false
   prerelease: auto
-  name_template: "{{.ProjectName}}-v{{.Version}}"
+  name_template: "Release {{.Version}}"
+  header: |
+    ## Release {{.Version}}
+    
+    **Full Changelog**: https://github.com/{{ .Env.GITHUB_REPOSITORY | default "domain-scan/domain-scan" }}/compare/{{ .PreviousTag }}...{{ .Tag }}
+  footer: |
+    ## Installation
+    
+    ### Binary Downloads
+    Download the appropriate binary for your platform from the assets below.
+    
+    ### Package Managers
+    ```bash
+    # Homebrew (macOS/Linux)
+    brew install domain-scan/tap/domain-scan
+    
+    # APT (Debian/Ubuntu)
+    wget https://github.com/domain-scan/domain-scan/releases/download/{{.Tag}}/domain-scan_amd64.deb
+    sudo dpkg -i domain-scan_amd64.deb
+    
+    # RPM (RHEL/CentOS/Fedora)
+    wget https://github.com/domain-scan/domain-scan/releases/download/{{.Tag}}/domain-scan_amd64.rpm
+    sudo rpm -i domain-scan_amd64.rpm
+    ```
+    
+    ### Docker
+    ```bash
+    docker run --rm ghcr.io/domain-scan/domain-scan:{{.Tag}} --help
+    ```
 
 brews:
   - name: domain-scan
     repository:
       owner: domain-scan
       name: homebrew-tap
-    folder: Formula
+    directory: Formula
     homepage: https://github.com/domain-scan/domain-scan
     description: "Comprehensive domain asset discovery tool"
     license: MIT
@@ -109,51 +134,47 @@ nfpms:
       - deb
       - rpm
 
-# snapcrafts:
-#   - name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-#     summary: Comprehensive domain asset discovery tool
-#     description: |
-#       Domain-scan is a comprehensive web asset discovery tool that combines
-#       passive subdomain enumeration, TLS certificate analysis, and HTTP service
-#       verification to provide complete visibility into domain infrastructure.
-#     grade: stable
-#     confinement: strict
-#     publish: false
-#     license: MIT
+dockers:
+  - image_templates:
+      - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-amd64"
+      - "ghcr.io/domain-scan/domain-scan:latest-amd64"
+    dockerfile: Dockerfile
+    use: buildx
+    build_flag_templates:
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--label=org.opencontainers.image.description=Comprehensive domain asset discovery tool"
+      - "--platform=linux/amd64"
+    extra_files:
+      - config.yaml
+  - image_templates:
+      - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-arm64v8"
+      - "ghcr.io/domain-scan/domain-scan:latest-arm64v8"
+    dockerfile: Dockerfile
+    use: buildx
+    build_flag_templates:
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+      - "--label=org.opencontainers.image.description=Comprehensive domain asset discovery tool"
+      - "--platform=linux/arm64/v8"
+    goarch: arm64
+    extra_files:
+      - config.yaml
 
-# dockers:
-#   - image_templates:
-#       - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-amd64"
-#       - "ghcr.io/domain-scan/domain-scan:latest-amd64"
-#     dockerfile: Dockerfile
-#     use: buildx
-#     build_flag_templates:
-#       - "--pull"
-#       - "--label=org.opencontainers.image.created={{.Date}}"
-#       - "--label=org.opencontainers.image.title={{.ProjectName}}"
-#       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-#       - "--label=org.opencontainers.image.version={{.Version}}"
-#       - "--platform=linux/amd64"
-#   - image_templates:
-#       - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-arm64v8"
-#       - "ghcr.io/domain-scan/domain-scan:latest-arm64v8"
-#     dockerfile: Dockerfile
-#     use: buildx
-#     build_flag_templates:
-#       - "--pull"
-#       - "--label=org.opencontainers.image.created={{.Date}}"
-#       - "--label=org.opencontainers.image.title={{.ProjectName}}"
-#       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-#       - "--label=org.opencontainers.image.version={{.Version}}"
-#       - "--platform=linux/arm64/v8"
-#     goarch: arm64
-
-# docker_manifests:
-#   - name_template: "ghcr.io/domain-scan/domain-scan:{{ .Version }}"
-#     image_templates:
-#       - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-amd64"
-#       - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-arm64v8"
-#   - name_template: "ghcr.io/domain-scan/domain-scan:latest"
-#     image_templates:
-#       - "ghcr.io/domain-scan/domain-scan:latest-amd64"
-#       - "ghcr.io/domain-scan/domain-scan:latest-arm64v8"
+docker_manifests:
+  - name_template: "ghcr.io/domain-scan/domain-scan:{{ .Version }}"
+    image_templates:
+      - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-amd64"
+      - "ghcr.io/domain-scan/domain-scan:{{ .Version }}-arm64v8"
+  - name_template: "ghcr.io/domain-scan/domain-scan:latest"
+    image_templates:
+      - "ghcr.io/domain-scan/domain-scan:latest-amd64"
+      - "ghcr.io/domain-scan/domain-scan:latest-arm64v8"
